Moves dark mode filter to static asset to avoid flickering

--- a/src/client/components/App/index.css
+++ b/src/client/components/App/index.css
@@ -108,17 +108,6 @@ div.LoginPage > div {
   margin: 10px 0;
 }
 
-div.ColorSchemeCover > div {
-  pointer-events: none;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  display: none;
-}
-
 div.Router {
   position: relative;
 }
@@ -177,20 +166,5 @@ div.Router:not(.transitioning.backward) > div.currentPage {
 @media (prefers-color-scheme: dark) {
   .colored {
     filter: invert(100%);
-  }
-
-  div.ColorSchemeCover > div {
-    display: inherit;
-  }
-
-  div.ColorSchemeCover > div.offset {
-    mix-blend-mode: normal;
-    background-color: #fff;
-    opacity: 0.15;
-  }
-
-  div.ColorSchemeCover > div.subtract {
-    mix-blend-mode: difference;
-    background-color: #fff;
   }
 }
